--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
 }
 
 tasks.named('test') {
