--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
+	implementation 'com.h2database:h2'
 
 }
 
