--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,10 @@ dependencies {
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
 	implementation 'com.h2database:h2'
-
+	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
 
