--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,15 @@ configurations {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
-	implementation 'javax.persistence:javax.persistence-api:2.2'
+	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'com.h2database:h2'
-	implementation 'com.mysql:mysql-connector-j' // 변경된 부분
+	implementation 'com.mysql:mysql-connector-j'
 }
 
 repositories {
