--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=devzip
 
 # JPA 비활성화
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 # X-Forwarded-For
 server.tomcat.remote-ip-header=x-forwarded-for
@@ -10,7 +10,10 @@ server.tomcat.internal-proxies=10\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|20\\.\\d{1,3}
 server.use-forward-headers=true
 
 # debug level
-logging.level.org.springframework.web=DEBUG
+# logging.level.org.springframework.web=DEBUG
 
 # DB
-spring.profiles.include=aws
+spring.profiles.includ=aws
+
+
+logging.level.org.springframework=DEBUG
