--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ server.use-forward-headers=true
 # DB
 spring.profiles.includ=aws
 
-
-logging.level.org.springframework=DEBUG
+# DB Health
+management.endpoints.web.exposure.include=health
