--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.profiles.includ=aws
 
 # DB Health
 management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
