--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ server.use-forward-headers=true
 
 # debug level
 # logging.level.org.springframework.web=DEBUG
+logging.level.root=DEBUG
 
 # DB
 spring.profiles.includ=aws
