--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.use-forward-headers=true
 logging.level.root=DEBUG
 
 # DB
-spring.profiles.includ=aws
+spring.profiles.include=aws
 
 # DB Health
 management.endpoints.web.exposure.include=health
