--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.77.6",
     "socket.io-client": "^4.7.5",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
