--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.25'
 	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	implementation 'com.h2database:h2'
