--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "http-proxy-middleware": "^3.0.0",
+    "phaser": "^3.80.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
