--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -19,9 +19,8 @@ jobs:
           key: ${{ secrets.REMOTE_PRIVATE_KEY }} # ec2 instance pem key
           port: ${{ secrets.REMOTE_SSH_PORT }} # 접속포트
           script: | # 실행할 스크립트
-            cd /home/ubuntu/Server-V2
-            git pull origin dev
-            pm2 kill
-            npm i --force
-            npm run build
-            pm2 start dist/main.js
+            cd /var/project/devzip/
+            fuser -k 8080/tcp
+            git pull origin master
+            ./gradlew clean build
+            java -jar build/libs/devzip-0.0.1-SNAPSHOT.jar
