--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -21,6 +21,4 @@ jobs:
           script: | # 실행할 스크립트
             cd /var/project/devzip/
             fuser -k 8080/tcp
-            git pull origin master
-            ./gradlew clean build
-            java -jar build/libs/devzip-0.0.1-SNAPSHOT.jar
+            git pull origin master && ./gradlew clean build && pm2 start server.json
