--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # spring.jpa.properties.hibernate.transaction.jta.platform= org.hibernate.service.jta.JtaPlatform
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # DB Health
 management.endpoints.web.exposure.include=health
