--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.use-forward-headers=true
 
 # debug level
 logging.level.org.springframework.web=DEBUG
-# logging.level.root=DEBUG
+logging.level.root=DEBUG
 
 # DB
 spring.profiles.include=aws
