--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,10 @@ logging.level.org.springframework.web=DEBUG
 spring.profiles.include=aws
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Logging for SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.transaction.jta.platform= org.hibernate.service.jta.JtaPlatform
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.properties.hibernate.dialect.storage_engine=InnoDB
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # DB Health
