--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.3",
+    "axios": "0.26.1", 
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.0",
     "phaser": "^3.80.1",
