--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,11 +27,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
 
-# Build 최적화
-org.gradle.daemon=true
-org.gradle.caching=true
-org.gradle.parallel=true
-org.gradle.configureondemand=true
+# # Build 최적화
+# org.gradle.daemon=true
+# org.gradle.caching=true
+# org.gradle.parallel=true
+# org.gradle.configureondemand=true
 
 # springboot security
 spring.security.enabled=false
