--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ management.endpoint.health.show-details=always
 # org.gradle.configureondemand=true
 
 # springboot security
-spring.security.enabled=false
+spring.security.enabled=true
 
 # Spring Security가 CSRF 토큰을 응답 쿠키에 포함하도록 설정
 server.servlet.session.cookie.secure=true
