--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect.storage_engine=InnoDB
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# DB Health
-management.endpoints.web.exposure.include=health
+# SpringBoot Actuator
+# 모든 endpoint를 공개 (기본적으로 몇몇만 공개됨)
+management.endpoints.web.exposure.include=*
+# 애플리케이션의 메트릭 정보를 확인할 수 있는 경로
 management.endpoint.health.show-details=always
 
 # # Build 최적화
