--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "1.6.2", 
+    "axios": "1.6.2",
+    "chart.js": "^4.4.7",
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.0",
     "phaser": "^3.80.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
     "react-icons": "^5.2.1",
