--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -19,5 +19,10 @@ jobs:
           port: ${{ secrets.REMOTE_SSH_PORT }} # 접속포트
           script: | # 실행할 스크립트
             cd /var/project/devzip/
+            rm -rf ~/.gradle/caches/
+            rm -rf build/
+            sudo rm -rf /var/log/*
+            sudo journalctl --vacuum-time=30d
+            sudo yum clean all
             fuser -k 8080/tcp
             git pull origin master && ./gradlew clean build && pm2 restart server.json
