--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -22,7 +22,8 @@ jobs:
             rm -rf ~/.gradle/caches/
             rm -rf build/
             sudo rm -rf /var/log/*
-            sudo journalctl --vacuum-time=30d
+            sudo rm -rf /var/project/devzip/.gradle/8.8/executionHistory
+            sudo rm -rf /var/project/devzip/.gradle/caches/
             sudo yum clean all
             fuser -k 8080/tcp
-            git pull origin master && ./gradlew clean build && pm2 restart server.json
+            git pull origin master && ./gradlew clean build --no-daemon && pm2 restart server.json
