/actuator/metrics/system.cpu.usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 management.endpoints.web.exposure.include=*
 # 애플리케이션의 메트릭 정보를 확인할 수 있는 경로
 management.endpoint.health.show-details=always
-management.endpoint.cpu-usage.enabled=true
+management.metrics.distribution.percentiles-histogram.cpu.usage=true
 
 # # Build 최적화
 # org.gradle.daemon=true
