--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -21,6 +21,8 @@ jobs:
             cd /var/project/devzip/
             ./gradlew --stop
             rm -rf ~/.gradle/caches/
+            rm -rf ~/.gradle/daemon/
+            rm -rf .gradle/
             rm -rf build/
             sudo rm -rf /var/log/*
             sudo rm -rf /var/project/devzip/.gradle/8.8/executionHistory
