network.interface=eth0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,5 @@ spring.security.enabled=true
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.same-site=strict
+
+network.interface=eth0
