--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,4 @@ server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.same-site=strict
 
-network.interface=eth0
+network.interface=enX0
