--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.tomcat.internal-proxies=10\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|20\\.\\d{1,3}
 server.use-forward-headers=true
 
 # debug level
-logging.level.org.springframework.web=DEBUG
+# logging.level.org.springframework.web=DEBUG
 # logging.level.root=DEBUG
 
 # DB
