--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,17 @@ server.tomcat.internal-proxies=10\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|20\\.\\d{1,3}
 server.use-forward-headers=true
 
 # debug level
-# logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
 # logging.level.root=DEBUG
 
 # DB
 spring.profiles.include=aws
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# Logging for SQL
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+# # Logging for SQL
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect.storage_engine=InnoDB
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
