--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.jsoup:jsoup:1.15.3' // 크롤링
     implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.fusesource:sigar:1.6.4'
+	implementation 'org.fusesource:sigar:1.6.5.132-6'
 }
 
 repositories {
 	mavenCentral()
-    maven {url 'https://repo.spring.io/snapshot'} // 스냅샷 저장소 추가
+    maven {
+        url "https://maven.repository.redhat.com/ga"
+    }
 }
 
 tasks.named('test') {
