--- a/src/main/pixel-roguelike/package.json
+++ b/src/main/pixel-roguelike/package.json
@@ -26,7 +26,8 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
