--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,12 @@ server.use-forward-headers=true
 
 # debug level
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
 # logging.level.root=DEBUG
+
+# Error Page
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 # DB
 spring.profiles.include=aws
@@ -47,3 +52,7 @@ server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.same-site=strict
 
 network.interface=enX0
+
+# pixel-roguelike
+spring.web.resources.add-mappings=true
+spring.web.resources.static-locations=classpath:/static/
