--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,6 @@ tasks.named('test') {
 
 // springboot + react 동시 빌드
 def frontendDir = "$projectDir/src/main/frontend"
-def pixelRoguelikeDir = "$projectDir/src/main/pixel-roguelike"
 
 // React 빌드 작업
 task installFrontendReact(type: Exec) {
@@ -73,31 +72,9 @@ task copyFrontendBuildFiles(type: Copy) {
     into "$projectDir/src/main/resources/static"
 }
 
-// pixel-roguelike 빌드 작업
-task installPixelRoguelikeReact(type: Exec) {
-    workingDir "$pixelRoguelikeDir"
-    inputs.dir "$pixelRoguelikeDir"
-    group = BasePlugin.BUILD_GROUP
-    commandLine "npm", "install"
-}
-
-task buildPixelRoguelikeReact(type: Exec) {
-    dependsOn "installPixelRoguelikeReact"
-    workingDir "$pixelRoguelikeDir"
-    inputs.dir "$pixelRoguelikeDir"
-    group = BasePlugin.BUILD_GROUP
-    commandLine "npm", "run-script", "build"
-}
-
-task copyPixelRoguelikeBuildFiles(type: Copy) {
-    dependsOn "buildPixelRoguelikeReact"
-    from "$pixelRoguelikeDir/build"
-    into "$projectDir/src/main/resources/static/pixel-roguelike"
-}
-
 // 리소스 복사 작업
 processResources {
-    dependsOn "copyFrontendBuildFiles", "copyPixelRoguelikeBuildFiles"
+    dependsOn "copyFrontendBuildFiles"
 }
 
 tasks.jar {
