--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "sass": "^1.77.6",
     "socket.io-client": "^4.7.5",
