--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "1.6.2",
     "chart.js": "^4.4.7",
+    "d3-force": "^3.0.0",
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.0",
     "phaser": "^3.80.1",
