--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -5,12 +5,21 @@ on:
     branches: [ master ]
 
 jobs:
-  deploy:
-    name: deploy
+  checkout:
+    name: 📝 Checkout Code
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🚀 Connect to EC2 via SSH and deploy
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+  stop_services:
+    name: 🛑 Stop Existing Services
+    runs-on: ubuntu-latest
+    needs: checkout  # checkout job 완료 후 실행
+
+    steps:
+      - name: Connect & Stop Services
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.REMOTE_IP }}
@@ -18,37 +27,55 @@ jobs:
           key: ${{ secrets.REMOTE_PRIVATE_KEY }}
           port: ${{ secrets.REMOTE_SSH_PORT }}
           script: |
-            echo "::group::🔗 Change directory to project"
+            echo "🔗 Navigating to project directory"
             cd /var/project/devzip/
-            echo "✅ Directory changed"
-            echo "::endgroup::"
-
-            echo "::group::🛑 Stop running services"
+            echo "🛑 Stopping running services"
             ./gradlew --stop
             fuser -k 8080/tcp || echo "⚠️ No process running on port 8080"
             pm2 stop all || echo "⚠️ No PM2 processes running"
             pm2 delete all || echo "⚠️ No PM2 processes to delete"
             echo "✅ Services stopped"
-            echo "::endgroup::"
 
-            echo "::group::🧹 Clean build folder and cache"
+  build:
+    name: 🏗️ Clean & Build Project
+    runs-on: ubuntu-latest
+    needs: stop_services  # stop_services 완료 후 실행
+
+    steps:
+      - name: Connect & Build Project
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.REMOTE_IP }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.REMOTE_PRIVATE_KEY }}
+          port: ${{ secrets.REMOTE_SSH_PORT }}
+          script: |
+            echo "🧹 Cleaning previous build"
+            cd /var/project/devzip/
             sudo rm -rf build/
             sudo yum clean all
-            echo "✅ Build folder cleaned"
-            echo "::endgroup::"
-
-            echo "::group::📥 Pull latest code from master"
+            echo "📥 Pulling latest code"
             git pull origin master || { echo "❌ Git pull failed"; exit 1; }
-            echo "✅ Code pulled successfully"
-            echo "::endgroup::"
-
-            echo "::group::🏗️ Build project with Gradle"
+            echo "🏗️ Building project"
             ./gradlew clean build --no-daemon --parallel --configure-on-demand || { echo "❌ Build failed"; exit 1; }
             echo "✅ Build completed"
-            echo "::endgroup::"
 
-            echo "::group::🚀 Restart PM2 processes"
+  deploy:
+    name: 🚀 Deploy & Restart Services
+    runs-on: ubuntu-latest
+    needs: build  # build 완료 후 실행
+
+    steps:
+      - name: Restart PM2 services
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.REMOTE_IP }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.REMOTE_PRIVATE_KEY }}
+          port: ${{ secrets.REMOTE_SSH_PORT }}
+          script: |
+            echo "🚀 Deploying application"
+            cd /var/project/devzip/
             pm2 start server.json || { echo "❌ Failed to start server"; exit 1; }
             pm2 start src/main/python/trends.py --cron "0 */2 * * *" --no-autorestart || { echo "❌ Failed to start Python process"; exit 1; }
-            echo "✅ PM2 processes restarted"
-            echo "::endgroup::"
+            echo "✅ Deployment and service restart completed"
