Build 최적화를 위해 Gradle 데몬 활성화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ management.endpoint.metrics.enabled=true
 management.metrics.distribution.percentiles-histogram.cpu.usage=true
 
 # # Build 최적화
-# org.gradle.daemon=true
+org.gradle.daemon=true
 # org.gradle.caching=true
 # org.gradle.parallel=true
 # org.gradle.configureondemand=true
