--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
     "react-icons": "^5.2.1",
+    "react-native": "^0.79.0",
+    "react-native-svg": "^15.11.2",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
