npm install 시 --legacy-peer-deps 옵션 추가

--- a/build.gradle
+++ b/build.gradle
@@ -52,10 +52,8 @@ def frontendDir = "$projectDir/src/main/frontend"
 
 // React 빌드 작업
 task installFrontendReact(type: Exec) {
-    workingDir "$frontendDir"
-    inputs.dir "$frontendDir"
-    group = BasePlugin.BUILD_GROUP
-    commandLine "npm", "install"
+    workingDir "${rootDir}/src/main/frontend"
+    commandLine 'npm', 'install', '--legacy-peer-deps'
 }
 
 task buildFrontendReact(type: Exec) {
