--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.7.5",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4",
     "ws": "^8.18.0"
   },
