WebController, application.properties에서 SPA 라우팅 설정 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,8 @@ network.interface=enX0
 # pixel-roguelike
 spring.web.resources.add-mappings=true
 spring.web.resources.static-locations=classpath:/static/
+
+# TraceBoard - SPA 라우팅을 위한 설정
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/**
