--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.jsoup:jsoup:1.15.3' // 크롤링
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.apache.commons:commons-csv:1.10.0' // Apache Commons CSV
+    implementation 'org.projectlombok:lombok' // Lombok 명시적 추가
 }
 
 repositories {
