feat: Docker 환경에 MySQL 데이터베이스 통합
- Docker Compose로 MySQL 8.0 컨테이너 추가
- 환경변수를 .env 파일로 분리하여 보안 강화
- 헬스체크 및 의존성 설정으로 안정성 향상
- 도커 네트워크 격리 및 볼륨 관리
- MySQL Workbench 접속 지원

--- a/.gitignore
+++ b/.gitignore
@@ -502,3 +502,12 @@ src/main/resources/static/
 
 # Python data files
 src/main/resources/trending_keywords.json
+
+# 환경변수 파일
+.env
+.env.local
+.env.production
+.env.staging
+
+# 도커 관련
+docker-compose.override.yml
