--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
+      env:
+        CI: false
       run: ./gradlew build -x test
 
     - name: Deploy to server
