--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,3 +61,7 @@ spring.web.resources.static-locations=classpath:/static/
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.chain.strategy.content.enabled=true
 spring.web.resources.chain.strategy.content.paths=/**
+
+# server open
+server.port=8080
+server.address=0.0.0.0
