--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,15 +46,6 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         debug: true
         script: |
-          # 필수 서비스 상태 확인 및 재시작
-          echo "Checking and restarting essential services..."
-          
-          # SSH 서비스 확인 및 재시작
-          sudo systemctl is-active ssh.service || sudo systemctl restart ssh.service
-          
-          # Docker 서비스 확인 및 재시작
-          sudo systemctl is-active docker.service || sudo systemctl restart docker.service
-          
           cd ~/project/devzip
           # Git 설정 및 최신 코드 가져오기
           git config pull.rebase false
@@ -62,21 +53,9 @@ jobs:
           
           # Docker 작업 실행
           if [ $? -eq 0 ]; then
-            echo "Stopping existing containers..."
-            docker compose down || true
-            
-            echo "Building new containers..."
-            docker compose build --no-cache
-            
-            echo "Starting containers..."
+            docker compose down
+            docker compose build
             docker compose up -d
-            
-            echo "Checking container status..."
-            docker compose ps
-            
-            # 컨테이너 로그 확인
-            sleep 10
-            docker compose logs --tail=50
           else
             echo "Git pull failed. Deployment stopped."
             exit 1
