--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
             # 실행 권한 부여
             chmod +x gradlew
             # Spring Boot 애플리케이션 빌드 (프론트엔드 포함)
-            ./gradlew build -x test
+            ./gradlew clean build -x test
             # Docker 재시작
             docker compose down
             docker compose build
