Force complete Docker rebuild to clear cached SecurityConfig conflicts
- Add docker system prune and image prune for complete cache cleanup
- Use --no-cache flag for docker compose build
- Ensure clean deployment without residual config conflicts

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -127,9 +127,11 @@ jobs:
             
             if [ $? -eq 0 ]; then
               echo "✅ Build successful, restarting services..."
-              # Docker 재시작
+              # Docker 완전 정리 및 재빌드
               docker compose down
-              docker compose build
+              docker system prune -f
+              docker image prune -f
+              docker compose build --no-cache
               docker compose up -d
               echo "🎉 Deployment completed successfully!"
             else
