Add secure admin account auto-creation system
Features:
- Environment variable based admin account configuration
- Automatic secure password generation when not specified
- Prevents duplicate admin account creation
- Docker Compose integration with environment variables
- Security enhanced with customizable admin credentials

Environment Variables:
- APP_ADMIN_USERNAME: Admin username (default: admin)
- APP_ADMIN_PASSWORD: Admin password (auto-generated if empty)
- APP_ADMIN_EMAIL: Admin email (default: admin@devzip.cloud)
- APP_ADMIN_AUTO_CREATE: Enable/disable auto creation (default: true)

Usage:
- Set environment variables for custom admin credentials
- Or use auto-generated secure temporary password
- Check application logs for generated credentials

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,11 @@ services:
       SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      # 관리자 계정 설정 (보안을 위해 환경변수로 관리)
+      APP_ADMIN_USERNAME: ${APP_ADMIN_USERNAME:-admin}
+      APP_ADMIN_EMAIL: ${APP_ADMIN_EMAIL:-admin@devzip.cloud}
+      APP_ADMIN_PASSWORD: ${APP_ADMIN_PASSWORD:-}
+      APP_ADMIN_AUTO_CREATE: ${APP_ADMIN_AUTO_CREATE:-true}
     depends_on:
       mysql:
         condition: service_healthy
