--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -30,5 +30,5 @@ app.websocket.allowed-origins=${WEBSOCKET_ORIGINS:http://localhost:8080,http://l
 # Disable CSRF protection for API calls
 spring.security.csrf.enabled=false
 
-# Allow all requests without authentication for debugging
-spring.security.web.ignoring=/**
+# Spring Security 설정 (디버깅용 무시 설정 제거)
+# spring.security.web.ignoring=/**
