Set default admin password in Docker configuration
- Add admin account configuration to application-docker.properties
- Set default admin password to azaz1216114!
- This will allow DataInitializer to use the specified password instead of generating random one

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -32,3 +32,9 @@ spring.security.csrf.enabled=false
 
 # Spring Security 설정 (디버깅용 무시 설정 제거)
 # spring.security.web.ignoring=/**
+
+# Admin Account Configuration
+app.admin.username=${APP_ADMIN_USERNAME:admin}
+app.admin.email=${APP_ADMIN_EMAIL:admin@devzip.cloud}  
+app.admin.password=${APP_ADMIN_PASSWORD:azaz1216114!}
+app.admin.auto-create=${APP_ADMIN_AUTO_CREATE:true}
