Fix JWT secret key length issue for HS512 algorithm
- Change JWT secret from 432 bits to 704 bits (88 characters)
- HS512 algorithm requires minimum 512 bits for secure signing
- Add explicit JWT configuration in application-docker.properties
- This resolves the SignatureException during JWT token generation

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -38,3 +38,7 @@ app.admin.username=${APP_ADMIN_USERNAME:admin}
 app.admin.email=${APP_ADMIN_EMAIL:admin@devzip.cloud}  
 app.admin.password=${APP_ADMIN_PASSWORD:azaz1216114!}
 app.admin.auto-create=${APP_ADMIN_AUTO_CREATE:true}
+
+# JWT Configuration  
+app.jwtSecret=${JWT_SECRET:MyVerySecureJWTSecretKeyForDevZip2024!@#$%^&*()_+1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ}
+app.jwtExpirationInMs=${JWT_EXPIRATION_MS:86400000}
