feat: Gemini API 키 설정을 환경 변수로 분리 및 적용

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ SPRING_PROFILES_ACTIVE=docker
 SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/your_database_name?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 SPRING_DATASOURCE_USERNAME=your_username
 SPRING_DATASOURCE_PASSWORD=your_password
+
+# Google AI Studio API (Gemini) - Hopperbox 계층 구조 생성에 사용
+# https://aistudio.google.com/app/apikey 에서 발급
+GOOGLE_API_KEY=your_google_ai_studio_api_key_here
