--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -88,6 +88,10 @@ app.jwtExpirationInMs=${JWT_EXPIRATION:86400000}
 app.encryption.secret-key=${ENCRYPTION_SECRET:MySecretKey123456789012345678901234567890}
 app.encryption.salt=${ENCRYPTION_SALT:TraceBoard2024Salt}
 
+# Google AI Studio API Settings (Gemini)
+# https://aistudio.google.com/app/apikey 에서 API 키 발급
+google.api.key=${GOOGLE_API_KEY:}
+
 # CORS Settings
 app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:8080,http://localhost:3000,https://192.168.75.224,http://192.168.75.224,http://192.168.75.224:8080,https://devzip.cloud,http://devzip.cloud}
 app.cors.max-age=${CORS_MAX_AGE:3600}
