feat: GitHub Actions에 git pull 단계 추가
- 서버의 git 저장소도 배포 시 자동으로 최신화
- JAR 전송 후 git pull로 코드 동기화 보장

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,6 +80,12 @@ jobs:
           cd /home/ubuntu/project/devzip
           echo "🚀 Starting deployment..."
 
+          # Git 저장소 최신화
+          echo "📥 Updating git repository..."
+          git config pull.rebase false
+          git pull origin master
+          echo "✅ Git repository updated"
+
           # JAR 파일 확인
           if [ ! -f build/libs/*.jar ]; then
             echo "❌ JAR file not found!"
