--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   # Spring Boot 애플리케이션
   app:
-    build: .
+    image: ${APP_IMAGE:-ghcr.io/devzip/devzip:latest}
     container_name: devzip-app
     ports:
       - "8080:8080"
